--- a/app/views/steak_nights/index.html.haml
+++ b/app/views/steak_nights/index.html.haml
@@ -1,1 +1,7 @@
 %h1.white-text Welcome to SteaksGiving.com
+#user-widget
+  - if current_user
+    ="Welcome #{current_user.name}!"
+    =link_to "Sign out", signout_path, id: "sign_out"
+  - else
+    =link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in"
